# gojo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
gojo/: __main__.py  main.py
gojo/cli/: __main__.py
gojo/clients/deequ/: __init__.py
gojo/clients/slack/: client.py  schema.py  slack_message_builder.py
gojo/clients/soda/: soda.py  soda_builder.py
gojo/config/: config.py  config_database_example.yml  load_soda_config.py
gojo/config/checks/: test_check.yml
gojo/config/credentials/: data_source.yml
gojo/data_models/: base_check_model.py  soda_check_model.py
gojo/data_monitoring/: data_monitoring.py
gojo/data_monitoring/alerts/: slack.py
gojo/data_monitoring/data_check/: data_monitoring_checker.py
gojo/data_monitoring/data_check/slack/: message_builder.py
gojo/data_monitoring/notifier/: data_monitoring_notifier.py
gojo/operations/: cli.py
gojo/parsers/: soda_yaml_parser.py
gojo/quality_check/: quality_check.py
gojo/quality_manager/: base_manager.py  soda_manager.py
gojo/quality_manager/slack/: soda_msg_builder.py
gojo/quality_runner/: quality_runner.py
gojo/runners/: soda_runner.py
gojo/utils/: log.py
